--- a/src/assets/styles/cmps/ApplicantHeader.scss
+++ b/src/assets/styles/cmps/ApplicantHeader.scss
@@ -12,6 +12,13 @@
     display: flex;
     align-items: center;
   }
+.check-box{
+  // border: 1px solid darken(red, 20%);
+  input{
+    border: 1px solid darken(red, 20%);
+
+  }
+}
   .select {
     width: 2rem;
     svg {
